--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>gradeapp</module>
     <module>courseapp</module>
+    <module>examapp</module>
   </modules>
 
   <properties>
