--- a/pom.xml
+++ b/pom.xml
@@ -63,13 +63,13 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>${logback.version}</version>
-        <scope>test</scope>
+        <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>${logback.version}</version>
-        <scope>test</scope>
+        <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.openurp.edu.course</groupId>
