修改课程设置及学时安排表格

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>gradeapp</module>
     <module>courseapp</module>
     <module>examapp</module>
+    <module>programapp</module>
   </modules>
 
   <properties>
@@ -84,6 +85,11 @@
       <dependency>
         <groupId>org.openurp.edu.course</groupId>
         <artifactId>openurp-edu-course-teacher</artifactId>
+        <version>${openurp.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.openurp.edu.program</groupId>
+        <artifactId>openurp-edu-program-plan</artifactId>
         <version>${openurp.version}</version>
       </dependency>
     </dependencies>
