--- a/gradeapp/pom.xml
+++ b/gradeapp/pom.xml
@@ -35,5 +35,10 @@
       <groupId>org.openurp.edu.grade</groupId>
       <artifactId>openurp-edu-grade-makeup</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.openurp.edu.grade</groupId>
+      <artifactId>openurp-edu-grade-core4j</artifactId>
+      <version>0.0.2-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
