--- a/gradeapp/pom.xml
+++ b/gradeapp/pom.xml
@@ -17,10 +17,6 @@
     </dependency>
     <dependency>
       <groupId>org.openurp.edu.grade</groupId>
-      <artifactId>openurp-edu-grade-audit</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.openurp.edu.grade</groupId>
       <artifactId>openurp-edu-grade-course</artifactId>
     </dependency>
     <dependency>
@@ -33,12 +29,8 @@
     </dependency>
     <dependency>
       <groupId>org.openurp.edu.grade</groupId>
-      <artifactId>openurp-edu-grade-makeup</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.openurp.edu.grade</groupId>
       <artifactId>openurp-edu-grade-core4j</artifactId>
-      <version>0.0.2-SNAPSHOT</version>
+      <version>${openurp.version}</version>
     </dependency>
   </dependencies>
 </project>
