add graduation-core4j to gradeapp

--- a/gradeapp/pom.xml
+++ b/gradeapp/pom.xml
@@ -32,5 +32,10 @@
       <artifactId>openurp-edu-grade-core4j</artifactId>
       <version>${openurp.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.openurp.edu.graduation</groupId>
+      <artifactId>openurp-edu-graduation-core4j</artifactId>
+      <version>${openurp.version}</version>
+    </dependency>
   </dependencies>
 </project>
