--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.openurp</groupId>
     <artifactId>openurp-java-parent</artifactId>
-    <version>0.3.17</version>
+    <version>0.3.20</version>
   </parent>
   <groupId>org.openurp.usst</groupId>
   <artifactId>openurp-ceurp-parent</artifactId>
@@ -13,7 +13,7 @@
 
   <modules>
     <module>gradeapp</module>
-    <module>courseapp</module>
+    <module>clazzapp</module>
     <module>examapp</module>
     <module>programapp</module>
   </modules>
@@ -21,7 +21,7 @@
   <properties>
     <downloadSources>true</downloadSources>
     <downloadJavadocs>false</downloadJavadocs>
-    <openurp.version>0.0.2-SNAPSHOT</openurp.version>
+    <openurp.version>0.1.0-SNAPSHOT</openurp.version>
   </properties>
 
   <dependencyManagement>
@@ -47,18 +47,18 @@
         <version>${openurp.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.openurp.edu.course</groupId>
-        <artifactId>openurp-edu-course-schedule</artifactId>
+        <groupId>org.openurp.edu.clazz</groupId>
+        <artifactId>openurp-edu-clazz-schedule</artifactId>
         <version>${openurp.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.openurp.edu.course</groupId>
-        <artifactId>openurp-edu-course-election</artifactId>
+        <groupId>org.openurp.edu.clazz</groupId>
+        <artifactId>openurp-edu-clazz-election</artifactId>
         <version>${openurp.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.openurp.edu.course</groupId>
-        <artifactId>openurp-edu-course-teacher</artifactId>
+        <groupId>org.openurp.edu.clazz</groupId>
+        <artifactId>openurp-edu-clazz-teacher</artifactId>
         <version>${openurp.version}</version>
       </dependency>
       <dependency>
