--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,14 @@
   <modules>
     <module>gradeapp</module>
     <module>clazzapp</module>
-    <module>examapp</module>
-    <module>programapp</module>
   </modules>
 
   <properties>
+    <java.version>17</java.version>
     <downloadSources>true</downloadSources>
     <downloadJavadocs>false</downloadJavadocs>
-    <openurp.version>0.3.0-SNAPSHOT</openurp.version>
-    <beangle3.version>3.8.8</beangle3.version>
+    <openurp.version>0.4.0-SNAPSHOT</openurp.version>
+    <beangle3.version>3.10.0-SNAPSHOT</beangle3.version>
     <maven.javadoc.skip>true</maven.javadoc.skip>
   </properties>
 
